fixed tab alignment issue, added portfolio page

--- a/src/styles/components/tab_bar.module.css
+++ b/src/styles/components/tab_bar.module.css
@@ -3,11 +3,15 @@
     background-color: var(--color-main);
     padding: 20px 50px;
     top: 0px;
+    left: 0px;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 18px;
+    box-sizing: border-box;
+    line-height: normal;
+    font-family: "Times New Roman", Times, serif;
 }
 
 .tab_group_left {
